examples/illtyped/gradingError.gr
-- Should not be typeable, instead must be at least
-- foo : Int |8| -> Int |4|
foo : Int |2| -> Int |4|
foo |x| = |(x + x)|
